Fixed notificationsView animations and z-index bug.

--- a/src/components/notificationsView/notifications.css
+++ b/src/components/notificationsView/notifications.css
@@ -6,10 +6,17 @@
     width: 100%;
     background-color: rgba(0, 0, 0, 0.253);
     animation: showNotificationsBg 0.6s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    z-index: 10;
 }
 
 .notifications-bg.close-notifications{
+    opacity: 0;
+}
+
+.notifications-container.close-notifications{
+    transform-origin: center center !important;
+    transform: translate(-50%, -50%) scale(0.6);
     opacity: 0;
 }
 
@@ -26,6 +33,8 @@
     transform-origin: top left;
     animation: showNotifications 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.151);
+    transition: all 0.4s ease-in-out;
+    z-index: 11;
 }
 
 .notifications-container h2{
